--- a/src/main/java/com/rizki/mufrizal/aplikasi/inventory/view/PenjualanView.form
+++ b/src/main/java/com/rizki/mufrizal/aplikasi/inventory/view/PenjualanView.form
@@ -107,6 +107,9 @@
                   </Table>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tabelPenjualanMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -263,9 +266,9 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane2" min="-2" pref="167" max="-2" attributes="0"/>
-                  <EmptySpace pref="60" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
