--- a/src/main/java/com/rizki/mufrizal/aplikasi/inventory/view/PenjualanView.form
+++ b/src/main/java/com/rizki/mufrizal/aplikasi/inventory/view/PenjualanView.form
@@ -81,7 +81,9 @@
                                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="cari" min="-2" pref="268" max="-2" attributes="0"/>
+                                  <Component id="value" min="-2" pref="268" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="key" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -97,7 +99,8 @@
                   <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="cari" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="value" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="key" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="168" max="-2" attributes="0"/>
@@ -266,10 +269,23 @@
             <Property name="text" type="java.lang.String" value="Cari"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="cari">
+        <Component class="javax.swing.JTextField" name="value">
           <Events>
-            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cariKeyReleased"/>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="valueKeyReleased"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="key">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="2">
+                <StringItem index="0" value="Kode Transaksi Penjualan"/>
+                <StringItem index="1" value="Nama Pembeli"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
